--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ sniffio==1.3.1
 sse-starlette==3.0.2
 starlette==0.48.0
 tqdm==4.67.1
-twitter-api-client @ git+https://github.com/touchmeangel/twitter-api-client@61c8317a218af6f2a195bfbe62c3ccbbb6ce884c
+twikit==2.3.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.37.0
