--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,4 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.37.0
 websockets==15.0.1
-git+https://github.com/touchmeangel/twikit@main
+git+https://github.com/touchmeangel/twikit
